[package]
name = "tmux-botdomo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tbdmd"
path = "src/daemon.rs"

[[bin]]
name = "tbdm"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
