[package]
name = "tmux-botdomo"
version = "0.1.0"
edition = "2024"
license = "MIT"
description="Majordomo of AI assistants living in the tmux sessions"
repository = "https://github.com/psyclaudeZ/tmux-botdomo/"
homepage = "https://github.com/psyclaudeZ/tmux-botdomo/"
keywords = ["tmux", "claude", "gemini", "codex", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "tbdmd"
path = "src/daemon.rs"

[[bin]]
name = "tbdm"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nix = { version = "0.30", features = ["process", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
test-mode = []
